<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    tools:context=".SignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:background="@drawable/custom_edit_text"
                android:layout_marginBottom="5dp"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:hint="@string/first_name"
                android:width="185dp"
                android:padding="5dp"
                android:inputType="text"
                android:layout_alignParentLeft="true"
                android:maxLength="15"/>

            <EditText
                android:background="@drawable/custom_edit_text"
                android:layout_marginBottom="5dp"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:hint="@string/last_name"
                android:width="185dp"
                android:padding="5dp"
                android:inputType="text"
                android:layout_toRightOf="@id/first_name"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:maxLength="15"

                />
            <EditText
                android:background="@drawable/custom_edit_text"
                android:layout_marginBottom="5dp"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/email_address"
                android:width="300dp"
                android:padding="5dp"
                android:inputType="textEmailAddress"
                android:layout_below="@id/last_name" />

            <EditText
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_edit_text"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:id="@+id/password"
                android:layout_width="185dp"
                android:layout_height="40dp"
                android:hint="@string/password"
                android:width="185dp"
                android:padding="5dp"
                android:inputType="textPassword"
                android:layout_below="@id/email"

                />
            <EditText
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_edit_text"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:id="@+id/confirm_password"
                android:layout_width="185dp"
                android:layout_height="40dp"
                android:hint="@string/confirm_password"
                android:width="185dp"
                android:padding="5dp"
                android:inputType="textPassword"
                android:layout_below="@id/email"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/password"
                android:layout_marginLeft="10dp"
                />

            <EditText
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_edit_text"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:hint="Phone Number"
                android:width="185dp"
                android:padding="5dp"
                android:inputType="phone"
                android:digits="0123456789+-()"
                android:layout_below="@id/password"
                android:maxLength="14"/>

            <Spinner
                android:layout_marginBottom="5dp"
                android:background="@drawable/spinner_bg"
                android:id="@+id/gender"
                android:dropDownSelector="@drawable/gradient"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/phone_number"
                android:hint="@string/gender"
                android:entries="@array/Gender"
                android:width="185dp"
                android:padding="2dp"
                android:layout_marginLeft="10dp"
                android:layout_below="@id/confirm_password"
                android:layout_alignParentRight="true"
                android:spinnerMode="dropdown"
                />

            <EditText
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_edit_text"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:id="@+id/school"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/school"
                android:width="300dp"
                android:padding="5dp"
                android:layout_below="@id/gender"/>

            <EditText
                android:id="@+id/school_id"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/school"
                android:layout_marginBottom="5dp"
                android:width="182dp"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/school_id"
                android:inputType="number"
                android:padding="5dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:maxLength="7"/>

            <EditText
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_edit_text"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:id="@+id/counselor_id"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:hint="Counselor ID"
                android:width="198dp"
                android:padding="5dp"
                android:inputType="number"
                android:layout_below="@id/school"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:maxLength="7"/>

            <EditText
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_edit_text"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:id="@+id/graduation_year"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/graduation_year"
                android:width="300dp"
                android:padding="5dp"
                android:inputType="number"
                android:layout_below="@id/counselor_id"
                android:maxLength="4" />


            <Button
                android:gravity="center"
                android:background="@drawable/custom_edit_text"
                android:layout_marginBottom="5dp"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:id="@+id/date_one"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:textSize="18sp"
                android:hint="Date of Birth"
                android:padding="5dp"
                android:layout_below="@+id/graduation_year"/>


            <Button
                android:textColor="?attr/buttontextcolor"
                android:background="@drawable/action_btn"
                android:id="@+id/register_button"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_below="@id/date_one"
                android:layout_centerHorizontal="true"
                android:text="@string/register"
                android:width="200dp"
                android:layout_marginTop="10dp" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>