<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    tools:context=".StudentProfile">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/profile_name_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="N A M E"
                android:textStyle="bold"
                android:textColor="?attr/tintcolor"
                />

            <EditText
                android:inputType="text"
                android:layout_below="@id/profile_name_text"
                android:textColorHint="@android:color/darker_gray"
                android:gravity="center"
                android:background="@drawable/custom_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_name"
                android:text="@string/name"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:layout_margin="5dp"
                android:padding="5dp"
                />

            <TextView
                android:textColor="?attr/tintcolor"

                android:layout_below="@id/profile_name"
                android:id="@+id/profile_email_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="E M A I L"
                android:textStyle="bold"
                />



            <EditText
                android:inputType="textEmailAddress"
                android:gravity="center"
                android:background="@drawable/custom_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_email"
                android:text="@string/email"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/black"
                android:textSize="16dp"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_below="@id/profile_email_text"
                />

            <TextView
                android:textColor="?attr/tintcolor"
                android:layout_below="@id/profile_email"
                android:id="@+id/profile_dob_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="D A T E   O F   B I R T H"
                android:textStyle="bold"
                />


            <EditText
                android:inputType="date"
                android:textColorHint="@android:color/black"
                android:gravity="center"
                android:background="@drawable/custom_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_birthday"
                android:text="@string/date_of_birth"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_below="@id/profile_dob_text"
                />

            <TextView
                android:textColor="?attr/tintcolor"
                android:layout_below="@id/profile_birthday"
                android:id="@+id/profile_phone_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="P H O N E   N U M B E R"
                android:textStyle="bold"
                />

            <EditText
                android:inputType="number"
                android:textColorHint="@android:color/black"
                android:gravity="center"
                android:background="@drawable/custom_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_phone_number"
                android:text="@string/phone_number"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_below="@id/profile_phone_text"
                />

            <TextView
                android:textColor="?attr/tintcolor"
                android:layout_below="@id/profile_phone_number"
                android:id="@+id/profile_gender_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="G E N D E R"
                android:textStyle="bold"
                />

            <EditText
                android:inputType="text"
                android:textColorHint="@android:color/black"
                android:gravity="center"
                android:background="@drawable/custom_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_gender"
                android:text="@string/gender"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_below="@id/profile_gender_text"
                />

            <TextView
                android:textColor="?attr/tintcolor"
                android:layout_below="@id/profile_gender"
                android:id="@+id/profile_school_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="S C H O O L"
                android:textStyle="bold"
                />


            <EditText
                android:inputType="text"
                android:textColorHint="@android:color/black"
                android:gravity="center"
                android:background="@drawable/custom_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_school"
                android:text="@string/school"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_below="@id/profile_school_text"
                />

            <TextView
                android:textColor="?attr/tintcolor"
                android:layout_below="@id/profile_school"
                android:id="@+id/profile_school_id_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="S C H O O L  I D"
                android:textStyle="bold"
                />


            <EditText
                android:inputType="number"
                android:textColorHint="@android:color/black"
                android:gravity="center"
                android:background="@drawable/custom_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_school_id"
                android:text="@string/school_id"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_below="@id/profile_school_id_text"
                />

            <TextView
                android:textColor="?attr/tintcolor"
                android:layout_below="@id/profile_school_id"
                android:id="@+id/profile_counselor_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="C O U N S E L O R  ID"
                android:textStyle="bold"
                />

            <EditText
                android:inputType="number"
                android:textColorHint="@android:color/black"
                android:gravity="center"
                android:background="@drawable/custom_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_counselor_id"
                android:text="@string/counselor_id"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_below="@id/profile_counselor_text"
                />

            <TextView
                android:textColor="?attr/tintcolor"
                android:layout_below="@id/profile_counselor_id"
                android:id="@+id/profile_graduation_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="G R A D U A T I O N   Y E A R"
                android:textStyle="bold"
                />

            <EditText
                android:inputType="number"
                android:textColorHint="@android:color/black"
                android:gravity="center"
                android:background="@drawable/custom_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/grad_year"
                android:text="@string/graduation_year"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_below="@id/profile_graduation_text"
                />

            <Button
                android:background="@drawable/action_btn"
                android:layout_marginBottom="40dp"
                android:textColor="?attr/buttontextcolor"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/update_button"
                android:layout_below="@id/grad_year"
                android:text="@string/update"
                android:textAllCaps="false"

                />


        </RelativeLayout>

    </ScrollView>


</FrameLayout>